# Codenames_Bot

./: .gitignore  README.md  brainstorm.ipynb  pyproject.toml
bots/guesser/: __init__.py  policy.py  prompts.py
bots/spymaster/: __init__.py  policy.py  prompts.py  schemas.py  validation.py
game/: __init__.py  config.py  engine.py
llm/: __init__.py  backends.py
llm/providers/: huggingface.py
runner/: __init__.py  evaluate.py  export.py  play.py  trajectory.py
scripts/: collect_rollouts.py  evaluate.py  play_game.py  train.py
tests/: test_bots.py  test_clue_validation.py  test_evaluate.py  test_game_engine.py  test_runner.py  test_utils.py
training/: __init__.py  grpo.py  log_probs.py  sft.py
utils/: __init__.py  math.py  oracle_clue.py  words.py
